# ft_turing

./: .gitignore  Cargo.toml  LICENSE  README.txt  dune-project  ft_turing.opam  ft_turing.opam.locked
machine-descriptions/: TODO  is_zero_n_one_n.json  is_zero_two_n.json  unary_add.json
machines/: is_02n.json  is_0n1n.json  is_palindrome.json  unary_add.json  unary_sub.subject.json
ocaml_old/: ft_turing.opam.locked
ocaml_old/lib/: parse.ml
ocaml_old/test/: dune
src/: input_checker.rs  machine_parser.rs  machine_runner.rs  main.rs  print.rs  ribbon_tools.rs  utils.rs
