(lang dune 3.7)

(name ft_turing)

(generate_opam_files true)

(source
 (github SimonCROS/ft_turing))

(authors "Simon Cros" "Karim Zennoune")

(maintainers "Simon Cros" "Karim Zennoune")

(license MIT)

(documentation https://github.com/SimonCROS/ft_turing)

(package
 (name ft_turing)
 (synopsis "Introduction to the Turing model")
 (description
  "Introduction to the Turing model\nft_turing will introduce you to the Turing model at the base of the imperative paradigm through an implementation of this model in OCaml.")
 (depends
  ocaml
  dune
  (core
   (>= 0.15.1))
  (yojson
   (>= 2.1.0))
  (ppx_deriving_yojson
   (>= 3.7.0)))
 (tags
  ("Theoretical model of the Turing machine"
   "State Machines"
   "Awareness of computability and complexity")))
